src/pgn-parser.js
/*
* Generated by PEG.src 0.10.0.
*
* http://pegjs.org/
*/
var pgnParser =
    (function() {
      "use strict";

      function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
      }

      function peg$SyntaxError(message, expected, found, location) {
        this.message  = message;
        this.expected = expected;
        this.found    = found;
        this.location = location;
        this.name     = "SyntaxError";

        if (typeof Error.captureStackTrace === "function") {
          Error.captureStackTrace(this, peg$SyntaxError);
        }
      }

      peg$subclass(peg$SyntaxError, Error);

      peg$SyntaxError.buildMessage = function(expected, found) {
        var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                  ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                  : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

        function hex(ch) {
          return ch.charCodeAt(0).toString(16).toUpperCase();
        }

        function literalEscape(s) {
          return s
              .replace(/\\/g, '\\\\')
              .replace(/"/g,  '\\"')
              .replace(/\0/g, '\\0')
              .replace(/\t/g, '\\t')
              .replace(/\n/g, '\\n')
              .replace(/\r/g, '\\r')
              .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
              .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
        }

        function classEscape(s) {
          return s
              .replace(/\\/g, '\\\\')
              .replace(/\]/g, '\\]')
              .replace(/\^/g, '\\^')
              .replace(/-/g,  '\\-')
              .replace(/\0/g, '\\0')
              .replace(/\t/g, '\\t')
              .replace(/\n/g, '\\n')
              .replace(/\r/g, '\\r')
              .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
              .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
        }

        function describeExpectation(expectation) {
          return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }

        function describeExpected(expected) {
          var descriptions = new Array(expected.length),
              i, j;

          for (i = 0; i < expected.length; i++) {
            descriptions[i] = describeExpectation(expected[i]);
          }

          descriptions.sort();

          if (descriptions.length > 0) {
            for (i = 1, j = 1; i < descriptions.length; i++) {
              if (descriptions[i - 1] !== descriptions[i]) {
                descriptions[j] = descriptions[i];
                j++;
              }
            }
            descriptions.length = j;
          }

          switch (descriptions.length) {
            case 1:
              return descriptions[0];

            case 2:
              return descriptions[0] + " or " + descriptions[1];

            default:
              return descriptions.slice(0, -1).join(", ")
                  + ", or "
                  + descriptions[descriptions.length - 1];
          }
        }

        function describeFound(found) {
          return found ? "\"" + literalEscape(found) + "\"" : "end of input";
        }

        return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
      };

      function peg$parse(input, options) {
        options = options !== void 0 ? options : {};

        var peg$FAILED = {},

            peg$startRuleFunctions = { pgn: peg$parsepgn },
            peg$startRuleFunction  = peg$parsepgn,

            peg$c0 = function(pw, all) { var arr = (all ? all : []); arr.unshift(pw);return arr; },
            peg$c1 = function(pb, all) { var arr = (all ? all : []); arr.unshift(pb); return arr; },
            peg$c2 = function() { return [[]]; },
            peg$c3 = function(pw) { return pw; },
            peg$c4 = function(pb) { return pb; },
            peg$c5 = function(cm, mn, cb, hm, nag, ca, cd, vari, all) { var arr = (all ? all : []);
              var move = {}; move.turn = 'w'; move.moveNumber = mn;
              move.notation = hm; move.commentBefore = cb; move.commentAfter = ca; move.commentMove = cm;
              move.variations = (vari ? vari : []); move.nag = (nag ? nag : null); arr.unshift(move);
              move.commentDiag = cd;
              return arr; },
            peg$c6 = function(cm, me, cb, hm, nag, ca, cd, vari, all) { var arr = (all ? all : []);
              var move = {}; move.turn = 'b'; move.moveNumber = me;
              move.notation = hm; move.commentBefore = cb; move.commentAfter = ca; move.commentMove = cm;
              move.variations = (vari ? vari : []); arr.unshift(move); move.nag = (nag ? nag : null);
              move.commentDiag = cd;
              return arr; },
            peg$c7 = "1:0",
            peg$c8 = peg$literalExpectation("1:0", false),
            peg$c9 = function() { return ["1:0"]; },
            peg$c10 = "0:1",
            peg$c11 = peg$literalExpectation("0:1", false),
            peg$c12 = function() { return ["0:1"]; },
            peg$c13 = "1-0",
            peg$c14 = peg$literalExpectation("1-0", false),
            peg$c15 = function() { return ["1-0"]; },
            peg$c16 = "0-1",
            peg$c17 = peg$literalExpectation("0-1", false),
            peg$c18 = function() { return ["0-1"]; },
            peg$c19 = "1/2-1/2",
            peg$c20 = peg$literalExpectation("1/2-1/2", false),
            peg$c21 = function() { return ["1/2-1/2"]; },
            peg$c22 = "*",
            peg$c23 = peg$literalExpectation("*", false),
            peg$c24 = function() { return ["*"]; },
            peg$c25 = function(cf, cfl) { var comm = cf; for (var i=0; i < cfl.length; i++) { comm += " " + cfl[i][1]}; return comm; },
            peg$c26 = /^[^}]/,
            peg$c27 = peg$classExpectation(["}"], true, false),
            peg$c28 = function(cm) { return cm.join("").trim(); },
            peg$c29 = function(cas) { return cas; },
            peg$c30 = function(ca, cal) { var ret = { }; if (cal) { var o = cal[0]; return {...ca, ...o}; } return ca; },
            peg$c31 = function(caf) { var ret = {}; ret.colorFields = caf; return ret; },
            peg$c32 = function(caa) { var ret = {}; ret.colorArrows = caa; return ret; },
            peg$c33 = function(cac) { var ret = {}; ret.clock = cac; return ret; },
            peg$c34 = "%csl",
            peg$c35 = peg$literalExpectation("%csl", false),
            peg$c36 = function(cfs) { return cfs; },
            peg$c37 = "%cal",
            peg$c38 = peg$literalExpectation("%cal", false),
            peg$c39 = ",",
            peg$c40 = peg$literalExpectation(",", false),
            peg$c41 = function(cf, cfl) { var arr = []; arr.push(cf); for (var i=0; i < cfl.length; i++) { arr.push(cfl[i][2])}; return arr; },
            peg$c42 = function(col, f) { return col + f; },
            peg$c43 = function(col, ff, ft) { return col + ff + ft; },
            peg$c44 = "Y",
            peg$c45 = peg$literalExpectation("Y", false),
            peg$c46 = function() { return "Y"; },
            peg$c47 = "G",
            peg$c48 = peg$literalExpectation("G", false),
            peg$c49 = function() { return "G"; },
            peg$c50 = "R",
            peg$c51 = peg$literalExpectation("R", false),
            peg$c52 = function() { return "R"; },
            peg$c53 = "B",
            peg$c54 = peg$literalExpectation("B", false),
            peg$c55 = function() { return "B"; },
            peg$c56 = function(col, row) { return col + row; },
            peg$c57 = "{",
            peg$c58 = peg$literalExpectation("{", false),
            peg$c59 = "}",
            peg$c60 = peg$literalExpectation("}", false),
            peg$c61 = "[",
            peg$c62 = peg$literalExpectation("[", false),
            peg$c63 = "]",
            peg$c64 = peg$literalExpectation("]", false),
            peg$c65 = "%",
            peg$c66 = peg$literalExpectation("%", false),
            peg$c67 = function(cc, cv) { var ret = {}; ret.type = cc; ret.value = cv; return ret; },
            peg$c68 = "clk",
            peg$c69 = peg$literalExpectation("clk", false),
            peg$c70 = function() { return "clk"; },
            peg$c71 = "egt",
            peg$c72 = peg$literalExpectation("egt", false),
            peg$c73 = function() { return "egt"; },
            peg$c74 = "emt",
            peg$c75 = peg$literalExpectation("emt", false),
            peg$c76 = function() { return "emt"; },
            peg$c77 = "mct",
            peg$c78 = peg$literalExpectation("mct", false),
            peg$c79 = function() { return "mct"; },
            peg$c80 = ":",
            peg$c81 = peg$literalExpectation(":", false),
            peg$c82 = function(h1, h2, m1, m2, s1, s2) { var ret = h1; if (h2) { ret += h2 }; ret += ":" + m1 + m2 + ":" + s1 + s2; return ret; },
            peg$c83 = /^[0-9]/,
            peg$c84 = peg$classExpectation([["0", "9"]], false, false),
            peg$c85 = function(d) { return d; },
            peg$c86 = function(vari, all, me) { var arr = (all ? all : []); arr.unshift(vari); return arr; },
            peg$c87 = function(vari, all) { var arr = (all ? all : []); arr.unshift(vari); return arr; },
            peg$c88 = "(",
            peg$c89 = peg$literalExpectation("(", false),
            peg$c90 = ")",
            peg$c91 = peg$literalExpectation(")", false),
            peg$c92 = function(num) { return num; },
            peg$c93 = ".",
            peg$c94 = peg$literalExpectation(".", false),
            peg$c95 = peg$otherExpectation("integer"),
            peg$c96 = function(digits) { return makeInteger(digits); },
            peg$c97 = " ",
            peg$c98 = peg$literalExpectation(" ", false),
            peg$c99 = function() { return '';},
            peg$c100 = function(fig, disc, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.disc =  (disc ? disc : null); hm.strike = (str ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.promotion = pr; hm.notation = (fig ? fig : "") + (disc ? disc : "") + (str ? str : "") + col + row + (pr ? pr : "") + (ch ? ch : ""); return hm; },
            peg$c101 = function(fig, cols, rows, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.strike = (str =='x' ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.notation = (fig && (fig!=='P') ? fig : "") + cols + rows + (str=='x' ? str : "-") + col  + row + (pr ? pr : "") + (ch ? ch : ""); hm.promotion = pr; return hm; },
            peg$c102 = function(fig, str, col, row, pr, ch) { var hm = {}; hm.fig = (fig ? fig : null); hm.strike = (str ? str : null); hm.col = col; hm.row = row; hm.check = (ch ? ch : null); hm.notation = (fig ? fig : "") + (str ? str : "") + col  + row + (pr ? pr : "") + (ch ? ch : ""); hm.promotion = pr; return hm; },
            peg$c103 = "O-O-O",
            peg$c104 = peg$literalExpectation("O-O-O", false),
            peg$c105 = function(ch) { var hm = {}; hm.notation = 'O-O-O'+ (ch ? ch : ""); hm.check = (ch ? ch : null); return  hm; },
            peg$c106 = "O-O",
            peg$c107 = peg$literalExpectation("O-O", false),
            peg$c108 = function(ch) { var hm = {}; hm.notation = 'O-O'+ (ch ? ch : ""); hm.check = (ch ? ch : null); return  hm; },
            peg$c109 = "+-",
            peg$c110 = peg$literalExpectation("+-", false),
            peg$c111 = "+",
            peg$c112 = peg$literalExpectation("+", false),
            peg$c113 = function(ch) { return ch[1]; },
            peg$c114 = "$$$",
            peg$c115 = peg$literalExpectation("$$$", false),
            peg$c116 = "#",
            peg$c117 = peg$literalExpectation("#", false),
            peg$c118 = "=",
            peg$c119 = peg$literalExpectation("=", false),
            peg$c120 = function(f) { return '=' + f; },
            peg$c121 = function(nag, nags) { var arr = (nags ? nags : []); arr.unshift(nag); return arr; },
            peg$c122 = "$",
            peg$c123 = peg$literalExpectation("$", false),
            peg$c124 = function(num) { return '$' + num; },
            peg$c125 = "!!",
            peg$c126 = peg$literalExpectation("!!", false),
            peg$c127 = function() { return '$3'; },
            peg$c128 = "??",
            peg$c129 = peg$literalExpectation("??", false),
            peg$c130 = function() { return '$4'; },
            peg$c131 = "!?",
            peg$c132 = peg$literalExpectation("!?", false),
            peg$c133 = function() { return '$5'; },
            peg$c134 = "?!",
            peg$c135 = peg$literalExpectation("?!", false),
            peg$c136 = function() { return '$6'; },
            peg$c137 = "!",
            peg$c138 = peg$literalExpectation("!", false),
            peg$c139 = function() { return '$1'; },
            peg$c140 = "?",
            peg$c141 = peg$literalExpectation("?", false),
            peg$c142 = function() { return '$2'; },
            peg$c143 = "\u203C",
            peg$c144 = peg$literalExpectation("\u203C", false),
            peg$c145 = "\u2047",
            peg$c146 = peg$literalExpectation("\u2047", false),
            peg$c147 = "\u2049",
            peg$c148 = peg$literalExpectation("\u2049", false),
            peg$c149 = "\u2048",
            peg$c150 = peg$literalExpectation("\u2048", false),
            peg$c151 = "\u25A1",
            peg$c152 = peg$literalExpectation("\u25A1", false),
            peg$c153 = function() { return '$7'; },
            peg$c154 = function() { return '$10'; },
            peg$c155 = "\u221E",
            peg$c156 = peg$literalExpectation("\u221E", false),
            peg$c157 = function() { return '$13'; },
            peg$c158 = "\u2A72",
            peg$c159 = peg$literalExpectation("\u2A72", false),
            peg$c160 = function() { return '$14'; },
            peg$c161 = "\u2A71",
            peg$c162 = peg$literalExpectation("\u2A71", false),
            peg$c163 = function() { return '$15';},
            peg$c164 = "\xB1",
            peg$c165 = peg$literalExpectation("\xB1", false),
            peg$c166 = function() { return '$16';},
            peg$c167 = "\u2213",
            peg$c168 = peg$literalExpectation("\u2213", false),
            peg$c169 = function() { return '$17';},
            peg$c170 = function() { return '$18';},
            peg$c171 = "-+",
            peg$c172 = peg$literalExpectation("-+", false),
            peg$c173 = function() { return '$19';},
            peg$c174 = "\u2A00",
            peg$c175 = peg$literalExpectation("\u2A00", false),
            peg$c176 = function() { return '$22'; },
            peg$c177 = "\u27F3",
            peg$c178 = peg$literalExpectation("\u27F3", false),
            peg$c179 = function() { return '$32'; },
            peg$c180 = "\u2192",
            peg$c181 = peg$literalExpectation("\u2192", false),
            peg$c182 = function() { return '$36'; },
            peg$c183 = "\u2191",
            peg$c184 = peg$literalExpectation("\u2191", false),
            peg$c185 = function() { return '$40'; },
            peg$c186 = "\u21C6",
            peg$c187 = peg$literalExpectation("\u21C6", false),
            peg$c188 = function() { return '$132'; },
            peg$c189 = "D",
            peg$c190 = peg$literalExpectation("D", false),
            peg$c191 = function() { return '$220'; },
            peg$c192 = /^[RNBQKP]/,
            peg$c193 = peg$classExpectation(["R", "N", "B", "Q", "K", "P"], false, false),
            peg$c194 = /^[a-h]/,
            peg$c195 = peg$classExpectation([["a", "h"]], false, false),
            peg$c196 = /^[1-8]/,
            peg$c197 = peg$classExpectation([["1", "8"]], false, false),
            peg$c198 = "x",
            peg$c199 = peg$literalExpectation("x", false),
            peg$c200 = "-",
            peg$c201 = peg$literalExpectation("-", false),

            peg$currPos          = 0,
            peg$savedPos         = 0,
            peg$posDetailsCache  = [{ line: 1, column: 1 }],
            peg$maxFailPos       = 0,
            peg$maxFailExpected  = [],
            peg$silentFails      = 0,

            peg$result;

        if ("startRule" in options) {
          if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
          }

          peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
          return input.substring(peg$savedPos, peg$currPos);
        }

        function location() {
          return peg$computeLocation(peg$savedPos, peg$currPos);
        }

        function expected(description, location) {
          location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

          throw peg$buildStructuredError(
              [peg$otherExpectation(description)],
              input.substring(peg$savedPos, peg$currPos),
              location
          );
        }

        function error(message, location) {
          location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

          throw peg$buildSimpleError(message, location);
        }

        function peg$literalExpectation(text, ignoreCase) {
          return { type: "literal", text: text, ignoreCase: ignoreCase };
        }

        function peg$classExpectation(parts, inverted, ignoreCase) {
          return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
        }

        function peg$anyExpectation() {
          return { type: "any" };
        }

        function peg$endExpectation() {
          return { type: "end" };
        }

        function peg$otherExpectation(description) {
          return { type: "other", description: description };
        }

        function peg$computePosDetails(pos) {
          var details = peg$posDetailsCache[pos], p;

          if (details) {
            return details;
          } else {
            p = pos - 1;
            while (!peg$posDetailsCache[p]) {
              p--;
            }

            details = peg$posDetailsCache[p];
            details = {
              line:   details.line,
              column: details.column
            };

            while (p < pos) {
              if (input.charCodeAt(p) === 10) {
                details.line++;
                details.column = 1;
              } else {
                details.column++;
              }

              p++;
            }

            peg$posDetailsCache[pos] = details;
            return details;
          }
        }

        function peg$computeLocation(startPos, endPos) {
          var startPosDetails = peg$computePosDetails(startPos),
              endPosDetails   = peg$computePosDetails(endPos);

          return {
            start: {
              offset: startPos,
              line:   startPosDetails.line,
              column: startPosDetails.column
            },
            end: {
              offset: endPos,
              line:   endPosDetails.line,
              column: endPosDetails.column
            }
          };
        }

        function peg$fail(expected) {
          if (peg$currPos < peg$maxFailPos) { return; }

          if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
          }

          peg$maxFailExpected.push(expected);
        }

        function peg$buildSimpleError(message, location) {
          return new peg$SyntaxError(message, null, null, location);
        }

        function peg$buildStructuredError(expected, found, location) {
          return new peg$SyntaxError(
              peg$SyntaxError.buildMessage(expected, found),
              expected,
              found,
              location
          );
        }

        function peg$parsepgn() {
          var s0, s1, s2;

          s0 = peg$currPos;
          s1 = peg$parsepgnStartWhite();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsepgnBlack();
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsepgnStartBlack();
            if (s1 !== peg$FAILED) {
              s2 = peg$parsepgnWhite();
              if (s2 === peg$FAILED) {
                s2 = null;
              }
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s1, s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsewhiteSpace();
              if (s1 === peg$FAILED) {
                s1 = null;
              }
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c2();
              }
              s0 = s1;
            }
          }

          return s0;
        }

        function peg$parsepgnStartWhite() {
          var s0, s1;

          s0 = peg$currPos;
          s1 = peg$parsepgnWhite();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s1);
          }
          s0 = s1;

          return s0;
        }

        function peg$parsepgnStartBlack() {
          var s0, s1;

          s0 = peg$currPos;
          s1 = peg$parsepgnBlack();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1);
          }
          s0 = s1;

          return s0;
        }

        function peg$parsepgnWhite() {
          var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

          s0 = peg$currPos;
          s1 = peg$parsewhiteSpace();
          if (s1 === peg$FAILED) {
            s1 = null;
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parsecomments();
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parsewhiteSpace();
              if (s3 === peg$FAILED) {
                s3 = null;
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parsemoveNumber();
                if (s4 === peg$FAILED) {
                  s4 = null;
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$parsewhiteSpace();
                  if (s5 === peg$FAILED) {
                    s5 = null;
                  }
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parsecomments();
                    if (s6 === peg$FAILED) {
                      s6 = null;
                    }
                    if (s6 !== peg$FAILED) {
                      s7 = peg$parsewhiteSpace();
                      if (s7 === peg$FAILED) {
                        s7 = null;
                      }
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parsehalfMove();
                        if (s8 !== peg$FAILED) {
                          s9 = peg$parsewhiteSpace();
                          if (s9 === peg$FAILED) {
                            s9 = null;
                          }
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parsenags();
                            if (s10 === peg$FAILED) {
                              s10 = null;
                            }
                            if (s10 !== peg$FAILED) {
                              s11 = peg$parsewhiteSpace();
                              if (s11 === peg$FAILED) {
                                s11 = null;
                              }
                              if (s11 !== peg$FAILED) {
                                s12 = peg$parsecomments();
                                if (s12 === peg$FAILED) {
                                  s12 = null;
                                }
                                if (s12 !== peg$FAILED) {
                                  s13 = peg$parsewhiteSpace();
                                  if (s13 === peg$FAILED) {
                                    s13 = null;
                                  }
                                  if (s13 !== peg$FAILED) {
                                    s14 = peg$parsecommentDiag();
                                    if (s14 === peg$FAILED) {
                                      s14 = null;
                                    }
                                    if (s14 !== peg$FAILED) {
                                      s15 = peg$parsewhiteSpace();
                                      if (s15 === peg$FAILED) {
                                        s15 = null;
                                      }
                                      if (s15 !== peg$FAILED) {
                                        s16 = peg$parsevariationWhite();
                                        if (s16 === peg$FAILED) {
                                          s16 = null;
                                        }
                                        if (s16 !== peg$FAILED) {
                                          s17 = peg$parsepgnBlack();
                                          if (s17 === peg$FAILED) {
                                            s17 = null;
                                          }
                                          if (s17 !== peg$FAILED) {
                                            peg$savedPos = s0;
                                            s1 = peg$c5(s2, s4, s6, s8, s10, s12, s14, s16, s17);
                                            s0 = s1;
                                          } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                          }
                                        } else {
                                          peg$currPos = s0;
                                          s0 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parseendGame();
          }

          return s0;
        }

        function peg$parsepgnBlack() {
          var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;
